Revert "Fixed the overlapping issue"

--- a/css/add-features.css
+++ b/css/add-features.css
@@ -60,6 +60,7 @@
             }
 
             .features {
+                position: absolute;
                 top: 0px;
                 left: 0px;
                 z-index: 0;
